--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
     color: rgb(196, 40, 113);
     background-color: black;
      background-image: url(../../public/my-profile.png) class="rounded-full" alt="Profile Picture"; 
+     background-size: cover;
+     background-position: center;
   }
  
 }
@@ -23,7 +25,9 @@
     display: inline-block;
     color: #fff;
     font-size: 12px;
+    @apply text-xs sm:text-sm md:text-base;
   }
+
   .tags:last-child {
     margin-right: 0;
   }
@@ -39,5 +43,9 @@
   .tags:nth-child(4) {
     background-color: #db9f10;
   }
+  .tags-container {
+    @apply flex flex-wrap;
+  }
 
 } 
+
