--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   .menu-link {
     @apply cursor-pointer hover:text-[#c5c5c5];
   }
+
   .tags {
     background-color: #0abde3;
     margin-right: 0.5rem;
@@ -24,7 +25,6 @@
     font-size: 12px;
     @apply text-xs sm:text-sm md:text-base;
   }
-
 
   .tags:nth-child(2) {
     background-color: #a55eea;
@@ -41,5 +41,50 @@
   /* Hover effect for cards */
   .hover\\:shadow-lg {
     @apply shadow-lg hover:shadow-2xl;
+  }
+  
+  /* Responsive Spacing for #hero */
+  #hero {
+    @apply mt-10 sm:mt-16 md:mt-20 lg:mt-24 xl:mt-28;
+  }
+
+  .text-pretty {
+    @apply text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl;
+  }
+
+  /* Adjust Image Size and Margin */
+  #hero img {
+    @apply w-2/3 sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5;
+    max-width: 250px;
+    margin-top: 10px;
+  }
+
+  /* Add Responsive Text and Spacing for Laptops */
+  @screen lg {
+    #hero {
+      @apply mx-16;
+    }
+
+    .text-pretty {
+      @apply text-5xl;
+    }
+
+    #hero p {
+      @apply text-lg leading-relaxed;
+    }
+  }
+
+  @screen xl {
+    #hero {
+      @apply mx-24;
+    }
+
+    .text-pretty {
+      @apply text-6xl;
+    }
+
+    #hero p {
+      @apply text-xl leading-relaxed;
+    }
   }
 }
